<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">YinzTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AddPlaceButton">Add Place</string>
    <string name="DBName">PlaceDB</string>
    <string name="DBVersion">1</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="BusRoutePrompt">Bus Route</string>
    <string name="place_name">Place Name : </string>
    <string name="save">Save</string>
    <string name="ChooseRoute">Choose Route</string>
    <string name="DialogAdd">Add</string>
    <string name="ChooseDirection">Choose Direction</string>
    <string name="ChooseStop">Choose Stop</string>
    <string name="title_activity_time_table">Time Table</string>
</resources>
