<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="us.vanmaanen.yinztracker.AddEditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top"
        android:layout_weight="0.2">
        <TextView
            style="@style/BlackTextBox"
            android:text="@string/place_name"
            android:id="@+id/PlaceNameLabel" />
        <EditText
            style="@style/BlackEditTextBox"
            android:hint="Edit Place"
            android:textColorHint="@color/gold"
            android:id="@+id/PlaceNameEdit"
            />
    </LinearLayout>
   <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addEditList"
        android:layout_gravity="center|center_horizontal"
        android:layout_weight="5"/>
    <Button
        android:text="@string/DialogAdd"
        android:id="@+id/startAddDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:background="@drawable/black_button"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_margin="3dp"
        android:gravity="center"
        android:onClick="onClickAdd"
        />
    <Button
        android:text="@string/save"
        android:id="@+id/placeSave"
        android:layout_margin="4dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gold"
        android:background="@drawable/black_button"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center"
        android:onClick="ClickSavePlace"
        />




</LinearLayout>
